# Snake-SFML

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  toolchain.cmake  toolchain_windows.cmake
SRC/AudioPlayer/MusicPlayer/: MusicPlayer.hpp
SRC/Utility/: FixesSFML.h
SRC/Utility/TextureStorage/: TextureStorage.cpp
SRC/Utility/WindowForTests/: WindowForTests.cpp  WindowForTests.hpp
